# Sensitivity-Calculator

./: .gitignore  .gitmodules  ACT_annual_50.45.out  ACT_annual_50.amc  Excel Spreadsheet.py  LICENSE  Noise.py  README.md  Sensitivity.py  Y1_simulations_231218.ipynb  ad_fns.py  ccat_noise_200831.py  commitAMData.sh  custom.yaml  get_noise_200831.py  input.yaml  methods comparison.yaml  minecmp.txt  noise.py  output.yaml  pedrocmp.txt  plotter.py  plt_horn_200625.py  power.yaml  pwvCalculator.py  pyproject.toml  requirements.txt  sensitivity.py  sensitivity.py.b99f7fd8004de1d8ecf8f1f8a0abd971.tmp  setup.cfg  setup.py  tox.ini  usage.ipynb
.github/workflows/: tests.yml
data/: ACT_MAM_25.0.out  ACT_MAM_25.amc  ACT_MAM_50_pwv0.51.out  ACT_MAM_50_pwv0.95.out  ACT_MAM_50_pwv1.81.out  ACT_annual_25.0.out  ACT_annual_25.11.out  ACT_annual_25.12.out  ACT_annual_25.14.out  ACT_annual_25.18.out  ACT_annual_25.19.out  ACT_annual_25.20.out  ACT_annual_25.22.out  ACT_annual_25.23.out  ACT_annual_25.25.out  ACT_annual_25.27.out  ACT_annual_25.29.out  ACT_annual_25.30.out  ACT_annual_25.31.out  ACT_annual_25.33.out  ACT_annual_25.34.out  ACT_annual_25.36.out  ACT_annual_25.37.out  ACT_annual_25.38.out  ACT_annual_25.4.out  ACT_annual_25.41.out  ACT_annual_25.42.out  ACT_annual_25.43.out  ACT_annual_25.47.out  ACT_annual_25.48.out  ACT_annual_25.51.out  ACT_annual_25.56.out  ACT_annual_25.57.out  ACT_annual_25.59.out  ACT_annual_25.6.out  ACT_annual_25.60.out  ACT_annual_25.63.out  ACT_annual_25.66.out  ACT_annual_25.7.out  ACT_annual_25.70.out  (+196 more)
data/25/: ACT_annual_25.1.out  ACT_annual_25.10.out  ACT_annual_25.13.out  ACT_annual_25.15.err  ACT_annual_25.15.out  ACT_annual_25.16.err  ACT_annual_25.16.out  ACT_annual_25.17.err  ACT_annual_25.17.out  ACT_annual_25.18.err  ACT_annual_25.19.err  ACT_annual_25.2.out  ACT_annual_25.20.err  ACT_annual_25.21.err  ACT_annual_25.21.out  ACT_annual_25.22.err  ACT_annual_25.23.err  ACT_annual_25.24.err  ACT_annual_25.24.out  ACT_annual_25.25.err  ACT_annual_25.26.err  ACT_annual_25.26.out  ACT_annual_25.27.err  ACT_annual_25.28.err  ACT_annual_25.28.out  ACT_annual_25.29.err  ACT_annual_25.3.out  (+79 more)
tests/: conftest.py  test_sensitivity_calculator.py
(+8142 files in other folders)
