[metadata]
name = sensitivity_calculator
version = 0.0.1
description = Calculates senstivities, noise curves, and map simulations for telescopes
author = Ari Mirsky
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    sensitivity_calculator
install_requires =
    pyyaml>=6.0
    numpy>=1.21
    matplotlib>=3.5
    texttable>=1.6
    scipy>=1.7
python_requires = >=3.6
package_dir =
    =src
zip_safe = no