[metadata]
name = sensitivity_calculator
version = 0.0.2
description = Calculates senstivities, noise curves, and map simulations for telescopes
author = Ari Mirsky
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    sensitivity_calculator
install_requires =
    pyyaml>=6.0
    numpy>=1.21
    matplotlib>=3.5
    texttable>=1.6
    scipy>=1.7
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24